Depend on protobuf using its cmake config
FindProtobuf provided by CMake forgets that it should depend on libabsl,
and link fails.

This change makes it to use files provided by Protobuf library, which
don't miss that important detail. That also required switch from
protobuf_generate_cpp() to protobuf_generate() because that's the
function which it has. FindProtobuf.cmake also provides
protobuf_generate() but only since CMake 3.13.

Fix #7272

--- a/ext/libclementine-remote/CMakeLists.txt
+++ b/ext/libclementine-remote/CMakeLists.txt
@@ -6,14 +6,14 @@ set(MESSAGES
   remotecontrolmessages.proto
 )
 
-protobuf_generate_cpp(PROTO_SOURCES PROTO_HEADERS ${MESSAGES})
-
 add_library(libclementine-remote STATIC
-  ${PROTO_SOURCES}
+  ${MESSAGES}
 )
 
+protobuf_generate(TARGET libclementine-remote LANGUAGE cpp)
+
 target_link_libraries(libclementine-remote
-  ${PROTOBUF_LIBRARY}
   libclementine-common
+  protobuf::libprotobuf
 )
 
