Still use FindProtobuf.cmake if one installed by protobuf is not found
This is for older protobuf library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,10 @@ endif(OPENGL_FOUND)
 find_package(Boost REQUIRED)
 find_package(Gettext REQUIRED)
 find_package(PkgConfig REQUIRED)
-find_package(protobuf REQUIRED)
+find_package(protobuf)
+if(NOT protobuf_FOUND)
+  find_package(Protobuf REQUIRED)
+endif()
 find_package(FFTW3)
 find_package(ALSA)
 if (NOT APPLE)
