--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -100,7 +100,7 @@ jobs:
     if: github.ref == 'refs/heads/master'
     needs:
       - build_bullseye_64
-      - build_buster_64
+      - build_bookworm_64
       - build_fedora_39
       - build_fedora_40
       - build_focal_64
@@ -548,6 +548,68 @@ jobs:
           name: release_mingw
           path: dist/windows/ClementineSetup*.exe
 
+  build_bookworm_64:
+    name: Build Debian Bookworm 64-bit deb
+    runs-on: ubuntu-24.04
+    container:
+      image: debian:bookworm
+    steps:
+      - name: Install dependencies
+        run: >
+          apt-get update && apt-get install -y
+          build-essential
+          cmake
+          debhelper
+          gettext
+          git
+          libasound2-dev
+          libboost-dev
+          libcdio-dev
+          libchromaprint-dev
+          libcrypto++-dev
+          libdbus-1-dev
+          libfftw3-dev
+          libglew-dev
+          libglib2.0-dev
+          libgpod-dev
+          libgstreamer-plugins-base1.0-dev
+          libgstreamer1.0-dev
+          liblastfm5-dev
+          libmtp-dev
+          libmygpo-qt-dev
+          libprotobuf-dev
+          libpulse-dev
+          libqt5x11extras5-dev
+          libsparsehash-dev
+          libsqlite3-dev
+          libtag1-dev
+          pkg-config
+          protobuf-compiler
+          qtbase5-dev
+          qttools5-dev-tools
+          qttools5-dev
+          ssh
+      - uses: actions/checkout@v4.2.2
+        with:
+          fetch-depth: 0
+      - name: git hackery
+        run: git config --global --add safe.directory ${GITHUB_WORKSPACE}
+      - name: cmake
+        working-directory: bin
+        run: >
+          cmake ..
+          -DWITH_DEBIAN=ON
+          -DDEB_ARCH=amd64
+          -DDEB_DIST=bookworm
+          -DENABLE_SPOTIFY_BLOB=OFF
+      - name: make
+        working-directory: bin
+        run : make -j2 deb
+      - uses: actions/upload-artifact@v4
+        with:
+          name: release_bookworm_64
+          path: bin/clementine_*.deb
+
   build_bullseye_64:
     name: Build Debian Bullseye 64-bit deb
     runs-on: ubuntu-24.04
@@ -608,67 +670,6 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: release_bullseye_64
-          path: bin/clementine_*.deb
-
-  build_buster_64:
-    name: Build Debian Buster 64-bit deb
-    runs-on: ubuntu-24.04
-    container:
-      image: debian:buster
-    steps:
-      - name: Install dependencies
-        run: >
-          apt-get update && apt-get install -y
-          build-essential
-          cmake
-          gettext
-          git
-          libasound2-dev
-          libboost-dev
-          libcdio-dev
-          libchromaprint-dev
-          libcrypto++-dev
-          libdbus-1-dev
-          libfftw3-dev
-          libglew1.5-dev
-          libglib2.0-dev
-          libgpod-dev
-          libgstreamer-plugins-base1.0-dev
-          libgstreamer1.0-dev
-          liblastfm5-dev
-          libmtp-dev
-          libmygpo-qt-dev
-          libprotobuf-dev
-          libpulse-dev
-          libqt5x11extras5-dev
-          libsparsehash-dev
-          libsqlite3-dev
-          libtag1-dev
-          pkg-config
-          protobuf-compiler
-          qtbase5-dev
-          qttools5-dev-tools
-          qttools5-dev
-          ssh
-      - uses: actions/checkout@v4.2.2
-        with:
-          fetch-depth: 0
-      - name: git hackery
-        run: git config --global --add safe.directory ${GITHUB_WORKSPACE}
-      - name: cmake
-        working-directory: bin
-        run: >
-          cmake ..
-          -DWITH_DEBIAN=ON
-          -DDEB_ARCH=amd64
-          -DDEB_DIST=buster
-          -DENABLE_SPOTIFY_BLOB=OFF
-      - name: make
-        working-directory: bin
-        run : make -j2 deb
-      - uses: actions/upload-artifact@v4
-        with:
-          name: release_buster_64
           path: bin/clementine_*.deb
 
   build_focal_64:
