feat: Implement Audio Backend Manager
- Add AudioBackendManager for dynamic backend switching
- Implement IAudioBackend interface for audio backends
- Add BitPerfect playback mode to GstEngine
- Add support for multiple sample rates and bit depths
- Add backend configuration UI in main window
- Update build system for new audio components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.13.0)
+
+# Setup Qt5 first
+find_package(Qt5 REQUIRED COMPONENTS Core Concurrent Widgets Network Sql Xml OpenGL Test)
+
 project(clementine)
 
 cmake_policy(SET CMP0053 OLD)
