🎛️ Release v0.0.4-experimental: AI Stem Separation & Multitrack Mixing
🎵 Major Features:
- Offline AI stem separation using Demucs models
- Real-time multitrack mixing with professional controls
- Quick presets (karaoke, instrumental, stem isolation)
- Zero-latency GStreamer playback engine

🔧 Technical Implementation:
- Robust 15-minute timeout with poll-based progress parsing
- GPL v3 compliant with verified dependency licenses
- Professional Qt mixing interface with volume/mute controls
- Python-C++ integration with structured error handling

📦 Package Support:
- DEB package for Debian/Ubuntu
- AppImage for universal Linux distribution
- Comprehensive documentation and license compliance

🎯 Core Components:
- StemSeparator: QProcess orchestration with timeout protection
- GstStemEngine: Multitrack GStreamer mixing engine
- StemMixerWidget: Professional mixing interface
- Python AI scripts with proper GPL v3 license headers

✅ Quality Assurance:
- Full license compliance verification (GPL v3)
- Comprehensive error handling and user feedback
- Memory optimization for large audio files
- Professional packaging with proper metadata

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,9 @@ include_directories(${CMAKE_BINARY_DIR}/ext/libclementine-tagreader)
 include_directories(${CMAKE_SOURCE_DIR}/ext/libclementine-remote)
 include_directories(${CMAKE_BINARY_DIR}/ext/libclementine-remote)
 
+# Python include directories for AI stem separation
+include_directories(${Python3_INCLUDE_DIRS})
+
 include(../cmake/ParseArguments.cmake)
 
 if(HAVE_TRANSLATIONS)
@@ -146,6 +149,10 @@ set(SOURCES
   engines/gstelementdeleter.cpp
   engines/gstpipelinebase.cpp
   engines/pipelineview.cpp
+  engines/stemseparator.cpp
+  engines/gststemengine.cpp
+  # engines/torchstemengine.cpp  # Removed in favor of ONNX Runtime
+  engines/onnxstemengine.cpp
 
   globalsearch/digitallyimportedsearchprovider.cpp
   globalsearch/globalsearch.cpp
@@ -367,6 +374,8 @@ set(SOURCES
   ui/globalshortcutgrabber.cpp
   ui/globalshortcutssettingspage.cpp
   ui/iconloader.cpp
+  ui/stemmixerwidget.cpp
+  ui/pythonstemcontroller.cpp
   ui/mainwindow.cpp
   ui/networkproxysettingspage.cpp
   ui/networkremotesettingspage.cpp
@@ -491,6 +500,10 @@ set(HEADERS
   engines/gstelementdeleter.h
   engines/gstpipelinebase.h
   engines/pipelineview.h
+  engines/stemseparator.h
+  engines/gststemengine.h
+  # engines/torchstemengine.h  # Removed in favor of ONNX Runtime
+  engines/onnxstemengine.h
 
   globalsearch/globalsearch.h
   globalsearch/globalsearchmodel.h
@@ -676,6 +689,8 @@ set(HEADERS
   ui/globalshortcutgrabber.h
   ui/globalshortcutssettingspage.h
   ui/mainwindow.h
+  ui/stemmixerwidget.h
+  ui/pythonstemcontroller.h
   ui/networkproxysettingspage.h
   ui/networkremotesettingspage.h
   ui/notificationssettingspage.h
@@ -1375,6 +1390,20 @@ endif (APPLE)
 
 set(3RDPARTY_SQLITE_LIBRARY qsqlite)
 target_link_libraries(clementine_lib qsqlite)
+
+# Python libraries for AI stem separation (legacy)
+target_link_libraries(clementine_lib Python3::Python)
+
+# ONNX Runtime for native C++ AI stem separation
+if(HAVE_ONNXRUNTIME)
+    target_include_directories(clementine_lib PRIVATE ${ONNXRUNTIME_INCLUDE_DIRS})
+    target_link_libraries(clementine_lib ${ONNXRUNTIME_LIBRARIES})
+    target_compile_definitions(clementine_lib PRIVATE HAVE_ONNXRUNTIME=1)
+    message(STATUS "✅ ONNX Runtime integration enabled")
+else()
+    target_compile_definitions(clementine_lib PRIVATE HAVE_ONNXRUNTIME=0)
+    message(STATUS "⚠️ ONNX Runtime disabled - using Python fallback")
+endif()
 
 if (WIN32)
   target_link_libraries(clementine_lib
