--- a/debian/control
+++ b/debian/control
@@ -41,21 +41,27 @@ Build-Depends: debhelper (>= 7),
 Standards-Version: 3.9.8
 Homepage: http://www.clementine-player.org/
 
-Package: clementine
+Package: clementine-extended
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
          libsqlite3-0,
          gstreamer1.0-plugins-base,
          gstreamer1.0-plugins-good,
          gstreamer1.0-plugins-ugly,
+         python3 (>= 3.8),
+         python3-pip,
+         python3-venv,
          gstreamer1.0-alsa,
          gstreamer1.0-pulseaudio,
          libprojectm-data | projectm-data
-Description: Modern music player and library organiser inspired by Amarok 1.4
- Clementine focuses on a fast and easy-to-use interface for searching and
- playing your music.
+Description: Modern music player with AI-powered stem separation capabilities
+ Clementine Extended focuses on a fast and easy-to-use interface for searching,
+ playing, and mixing your music with advanced AI features.
  .
- Features include:
+ Key Features:
+   * AI-Powered Stem Separation: Split songs into vocals, drums, bass, and other instruments
+   * Real-time Mixing: Individual volume, mute, and solo controls for each stem
+   * Quick Presets: One-click karaoke, instrumental, and single-stem modes
    * Search and play your local music library
    * Listen to internet radio from Last.fm, SomaFM, IntergalacticFM, Magnatune,
      Jamendo and Icecast
@@ -66,8 +72,10 @@ Description: Modern music player and library organiser inspired by Amarok 1.4
    * Transcode music into MP3, Ogg Vorbis, Ogg Speex, FLAC or AAC
    * Edit tags on MP3 and OGG files, organise your music
    * Download missing album cover art from Last.fm
-   * Cross-platform - works on Windows, Mac OS X and Linux
-   * Native desktop notifications on Linux (libnotify) and Mac OS X (Growl)
-   * Remote control using a Wii Remote, MPRIS or the command-line
+   * Cross-platform - works on Linux (Windows and Mac OS X coming soon)
+   * Native desktop notifications on Linux (libnotify)
+   * Remote control using MPRIS or the command-line
+ .
+ AI Requirements: First run downloads Demucs models (2-4 GB), requires internet connection.
    * Copy music to your iPod, iPhone, MTP or mass-storage USB player
    * Queue manager
